syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Nol1feee/CLI-chat/auth/pkg/auth_v1;auth_v1";

service auth_v1 {
    rpc Create(CreateRequest) returns (CreateResponse){
        option (google.api.http) = {
            post: "/auth/v1/create"
            body: "*"
            };
    }
    rpc Get(GetRequest) returns (GetResponse){
        option (google.api.http) = {
            post: "/auth/v1/get"
            body: "*"
        };
    }
    rpc Update(UpdateRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/auth/v1/update"
            body: "*"
        };
    }
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/auth/v1/delete"
            body: "*"
        };
    }
}

message UserInfo {
    string name = 1 [(validate.rules).string = {min_len: 3, max_len:30}];
    string email = 2 [(validate.rules).string.email = true];
    role role = 3;
}

message CreateRequest {
    UserInfo userInfo = 1;
    string password = 2;
    string password_confirm = 3;
}

enum role {
    user = 0;
    admin = 1;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1 [(validate.rules).int64.gte = 0];
}

message GetResponse {
    UserInfo userInfo = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
}

message UpdateRequest {
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
    role role = 4;
}

message DeleteRequest {
    int64 id = 1 [(validate.rules).int64.gte = 0];
}